tests/type/assign_to_any.rz
var f
var g: any

fn add() {}

f = add
g = add

fn add2() -> void {}

f = add2

fn add3(a: int) -> void {}
g = add3 // error: trying to assign value of type 'fn(int) -> void' to variable of type 'fn() -> void'
